src/scss/postup/_day-04.scss
// Thursday design checklist {
.design-checklist {
	gap: 2rem;
	width: 100%;

	.img-prototype-checklist {
		display: flex;
		width: 100%;
		height: auto;
	}
}

@include breakpoint(med) {
	.design-checklist {
		display: flex;
		flex-direction: row;
		gap: 2rem;

		.header-container {
			margin-top: -0.5rem;
			width: 100%;
			margin-bottom: 0.5rem;

			h3 {
				margin-top: 0;
				margin-bottom: 1rem;
			}
		}

		.img-prototype-checklist {
			width: calc(60% - 1rem);
		}
	}

	.design-checklist-text_wrapper {
		width: calc(40% - 1rem);
	}
}

.wireframes-heading {
	color: $black;
	flex: 1;
	font-size: 2.986rem;
	font-style: normal;
	font-weight: 600;
	line-height: 125%;
	margin-bottom: 3rem;
	margin-top: 0;
	letter-spacing: -0.1px;
	text-align: center;
}

// Prototype walkthrough
.container-full-width {
	gap: 1rem;

	h3 {
		margin-bottom: 1rem;
	}
}

.prototype-walkthrough-section_grid-container {
	display: grid;
	grid-template-columns: 1fr;
	grid-template-rows: auto auto;
}

.prototype-wrapper {
	background-color: $light-grey;
	padding: 2rem 0;

	header {
		max-width: 1200px;
		width: 90%;
		margin-bottom: 0;
	}
}

.prototype-walkthrough_heading {
	display: flex;
	color: $black;
	font-size: 1.8rem;
	font-style: normal;
	font-weight: 600;
	line-height: 125%;
	margin: 0 auto;
	max-width: 1200px;
	letter-spacing: -0.25px;
	width: 90%;

	@include breakpoint(med) {
		display: block;
		font-size: 2.25rem;
		text-align: left;
		align-self: flex-start;
	}
}

.prototype-walkthrough_wrapper {
	display: flex;
	flex-direction: column;
	max-width: 1600px;
	width: 90%;
	margin: 0 auto;
	padding: 2rem 1rem;
	border-radius: 1rem;
	background-color: $white;
	height: fit-content;
}

.prototype-walkthrough_mobile-accordion-wrapper {
	display: flex;
	width: 90%;
	margin: auto;
	margin-top: 1rem;
	margin-bottom: 0.5rem;

	@include breakpoint(med) {
		display: none;
	}
}

.prototype-walkthrough_grid-container {
	display: flex;
	flex-direction: column;
	margin: 0 auto;
	gap: 1rem;
	align-items: center;
	width: 100%;
}

.prototype-walkthrough_video {
	width: 80%;
	margin: 0 auto;
	max-width: 15rem;
}

.prototype-walkthrough_content-01,
.prototype-walkthrough_content-02 {
	display: none;
}

.prototype-walkthrough_subheading {
	font-size: 1.25rem;
	font-weight: 400 !important;
	margin-bottom: 0.5rem;
	color: $off-black !important;
	line-height: 125%;
}

.prototype-walkthrough_body {
	font-size: 1.125rem;
	font-weight: 400 !important;
	color: $medium-grey !important;
}

$prototype-accordion-bg: #1e1e1e;

.prototype-accordion {
	background-color: $prototype-accordion-bg;
	border-radius: 10px;
	padding: 1rem 1.25rem;
	border: 0;
	margin-top: 0;
}

.prototype-accordion_header {
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 1rem;
	padding-bottom: 0;
	border-radius: 10px;
	cursor: pointer;
	background-color: $prototype-accordion-bg;

	p {
		display: flex;
		font-size: 1.25rem;
		font-weight: 500;
		line-height: 130%;
		text-align: left;
		margin: 0;
		flex: 1;
		color: white;
	}

	.prototype-accordion_icon {
		transition: transform 0.4s;
		width: 1.5rem;
		height: 1.5rem;
		margin: auto;
	}
}

.prototype-accordion_content {
	max-height: 0;
	overflow: hidden;
	transition: max-height 0.2s ease-out;

	p {
		margin-top: 0.5rem;
		margin-bottom: 0.5rem;
		color: white; // Make sure this is not being overridden elsewhere
		text-align: left;
	}

	span {
		color: white;
	}
}

@include breakpoint(med) {
	.prototype-wrapper {
		padding: 3rem 0;
	}

	.prototype-walkthrough_wrapper {
		margin-bottom: 2rem;
		max-width: 60rem;
		padding: 3rem 3rem;
	}

	.prototype-walkthrough_grid-container {
		display: grid;
		grid-template-rows: auto auto auto auto;
		grid-template-columns: auto auto;
		grid-template-areas: "a b" ". b" "c c" "d d";
		gap: 2rem;
		margin: auto;
		justify-content: flex-start;
		width: 100%;
	}

	.prototype-walkthrough_heading {
		grid-area: a;
		width: 100%;
	}

	.prototype-walkthrough_video {
		height: 100%;
		width: fit-content;
		align-self: start;
		grid-area: b;
	}

	.prototype-walkthrough_content-01,
	.prototype-walkthrough_content-02 {
		display: block;
		width: 100%;

		p:last-child {
			margin-bottom: 0;
		}
	}

	.prototype-walkthrough_content-01 {
		grid-area: c;
	}

	.prototype-walkthrough_content-02 {
		grid-area: d;
	}

	.prototype-walkthrough_subheading {
		font-size: 1.2rem;
		color: $off-black !important;
		font-weight: 500 !important;
	}

	.prototype-walkthrough_body {
		font-size: 1.125rem;
		color: $medium-grey !important;
	}
}

@include breakpoint(lg) {
	.prototype-walkthrough_wrapper {
		padding: 3rem 4rem;
	}

	.prototype-walkthrough_grid-container {
		grid-template-rows: auto auto auto;
		grid-template-columns: auto auto;
		grid-template-areas: "a b" "c b" "d b";
		gap: 1rem 3rem;
	}

	.prototype-walkthrough_content-01,
	.prototype-walkthrough_content-02 {
		max-width: 34rem;
	}
}

@include breakpoint(xl) {
	.prototype-walkthrough_grid-container {
		grid-template-rows: auto auto auto;
		grid-template-columns: auto auto;
		grid-template-areas: "a b" "c b" "d b";
		gap: 1rem 3rem;
	}

	.prototype-walkthrough_subheading {
		font-size: 1.44rem;
	}

	.prototype-walkthrough_body {
		font-size: 1.15rem;
	}
}

